src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>wbsendit__Activity_Date__c</fullName>
        <inlineHelpText>Date of the last Campaign Monitor activity.</inlineHelpText>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wbsendit__Activity__c</fullName>
        <description>Last Campaign Monitor activity type.</description>
        <inlineHelpText>Last Campaign Monitor activity type.</inlineHelpText>
        <label>Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Bounced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clicked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubscribed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wbsendit__Clicks__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Shows number of times the subscriber clicked links from this email campaign.</inlineHelpText>
        <label>Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Opens__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Shows number of times the subscriber opened this email campaign.</inlineHelpText>
        <label>Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>